--- a/index.html
+++ b/index.html
@@ -43,14 +43,39 @@
             <h2 class="text-3">What services do I offer</h2>
             <div class="row">
                 <div class="col-4">
-                    
+                    <div class="card">
+                        <img class="card-img-top p-2" src="images/top-card-img-1.png" alt="Card image cap">
+                        <div class="card-body p-1">
+                            <h5 class="card-title">Landscape</h5>
+                          <p class="card-text">Curabitur blandit tempus porttitor. Duis mollis inceptos mollisest commodo luctus erat. </p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-4"></div>
-                <div class="col-4"></div>
+                <div class="col-4">
+                    <div class="card" >
+                        <img class="card-img-top p-2" src="images/top-card-img-2.png" alt="Card image cap">
+                        <div class="card-body p-1">
+                            <h5 class="card-title">Advertorial </h5>
+                          <p class="card-text">Maecenas faucibus mollis interdum. Morbi risus porta ac consectetur, vestibulum at eros.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img class="card-img-top p-2" src="images/top-card-img-3.png" alt="Card image cap">
+                        <div class="card-body p-1">
+                            <h5 class="card-title">Conceptual</h5>
+                          <p class="card-text">Donec elit non porta gravida eget metus. Etiam porta sem malesuada magna mollis euismod.</p>
+                        </div>
+                      </div>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Java Script cdn -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
