--- a/index.html
+++ b/index.html
@@ -171,11 +171,48 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="col-12">
+                                <div class="row">
+                                    <div class="col-2"><i class="fa fa-motorcycle"></i></div>
+                                    <div class="col-10">
+                                        <h4>Motion Video</h4>
+                                        <p>Curabitur blandit tempus porttitor. Duis at vollisky inceptos mollisestor commodo luctus erat. Morbi  risus, porta consectetur vestibulum at eros.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12">
+                                <div class="row">
+                                    <div class="col-2"><i class="fa fa-clone"></i></div>
+                                    <div class="col-10">
+                                        <h4>Photo Retouching</h4>
+                                        <p>Curabitur blandit tempus porttitor. Duis at vollisky inceptos mollisestor commodo luctus erat. Morbi  risus, porta consectetur vestibulum at eros.</p>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-3">
+                    <span class="heading"> Get In Touch</span>
+                    <p class="para-1">Fusce dapibus, tellus commodo, tortor mauris condimentum utellus fermentum, porta sem malesuada magna. </p>
+                </div>
+                <div class="col-3">
+                    <span class="heading">twitter</span>
+                </div>
+                <div class="col-3">
+                    <span class="heading">popular posts</span>
+                </div>
+                <div class="col-3">
+                    <span class="heading">about us</span>
+                </div>
+            </div>
         </div>
     </section>
 
