--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <p class="text-1">Hello! I’m Jonathon Kubb, a freelance Photographer.</p>
             <p class="text-2">Based in New York, I specialize in landscape, advertorial and conceptual photography.</p>
             <h2 class="text-3">What services do I offer</h2>
-            <div class="row">
+            <div class="row mt-3">
                 <div class="col-4">
                     <div class="card">
                         <img class="card-img-top p-2" src="images/top-card-img-1.png" alt="Card image cap">
@@ -93,7 +93,7 @@
             <div class="line ">
                 <h1 class="top-text">From the Journal</h1>
             </div>
-            <div class="journal-cards mt-3">
+            <div class="journal-cards mt-5">
                 <div class="row">
                     <div class="col-4">
                         <div class="card"><!-- style="width: 18rem;"-->
