--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <header>
+    <!-- <header>
         <nav class="navbar navbar-expand-sm  box">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -36,14 +36,14 @@
             <span class="mid">Photography</span>
             <span class="bottom">Based in New York since 2001</span>
         </div>
-    </header>
+    </header> -->
     <section class="banner-bg">
         <div class="container ">
             <p class="text-1">Hello! I’m Jonathon Kubb, a freelance Photographer.</p>
             <p class="text-2">Based in New York, I specialize in landscape, advertorial and conceptual photography.</p>
             <h2 class="text-3">What services do I offer</h2>
             <div class="row mt-3">
-                <div class="col-4">
+                <div class="col-lg-4 ">
                     <div class="card">
                         <img class="card-img-top p-2" src="images/top-card-img-1.png" alt="Card image cap">
                         <div class="card-body p-1">
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4">
+                <div class="col-lg-4">
                     <div class="card" >
                         <img class="card-img-top p-2" src="images/top-card-img-2.png" alt="Card image cap">
                         <div class="card-body p-1">
@@ -163,7 +163,7 @@
             </div>
             <div class="journal-last-part">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6  col-sm-12">
                         <h3>A little about me</h3>
                         <div class="row">
                             <div class="col-5">
@@ -181,7 +181,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6" id="service">
+                    <div class="col-lg-6  col-sm-12" id="service">
                         <h3 id="right-line">My Services</h3>
                         <div class="row">
                             <div class="col-12">
