--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
 <body>
-    <!-- <header>
+    <header>
         <nav class="navbar navbar-expand-sm  box">
             <div class="container">
                 <a class="navbar-brand" href="#">
@@ -36,7 +36,7 @@
             <span class="mid">Photography</span>
             <span class="bottom">Based in New York since 2001</span>
         </div>
-    </header> -->
+    </header>
     <section class="banner-bg">
         <div class="container ">
             <p class="text-1">Hello! I’m Jonathon Kubb, a freelance Photographer.</p>
